--- a/app/src/main/res/layout/item_libro.xml
+++ b/app/src/main/res/layout/item_libro.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,7 +17,8 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgFotoLibro"
                 android:layout_width="96dp"
-                android:layout_height="96dp" />
+                android:layout_height="96dp"
+                android:padding="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
